<resources>
    <string name="app_name">Weather App</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="temperature">temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="favorite">Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="weather">Weather</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="meterPerSecond">m/s</string>
    <string name="hpa">hpa</string>
    <string name="question">How would you Like to Use The App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numOfDayes">For How Many Day</string>
    <string name="selectStartDate">Select Start Date</string>
    <string name="startDate">Start Date</string>
    <string name="mapBtn">Select Location</string>
    <string name="title_activity_maps_activitytwo">MapsActivitytwo</string>
    <string name="selectTime">SelectTime</string>
</resources>