<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_back_ground"
    android:theme="@style/TransparentCompat"
    tools:context=".DialogActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/question"
                android:textColor="@color/teal_200"
                />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/mapBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:text="@string/map" />

                <RadioButton
                    android:id="@+id/gpsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:text="@string/gps" />
            </RadioGroup>
        </LinearLayout>



    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>